@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Don't require date.timezone setting in installer (#1485989)
 - Fix date sorting problem with Courier IMAP server (#1486065)
 - Unselect pressed buttons on mouse up (#1485987)
 - Don't set php_value error_log in .htaccess but mention in INSTALL (#1485924)
